Source/WebKit2/Shared/DictionaryPopupInfo.h
@@ -26,7 +26,6 @@
 #ifndef DictionaryPopupInfo_h
 #define DictionaryPopupInfo_h
 
-#include "FontInfo.h"
 #include <WebCore/FloatPoint.h>
 
 #if PLATFORM(MAC)
@@ -50,7 +49,6 @@ struct DictionaryPopupInfo {
     };
 
     WebCore::FloatPoint origin;
-    FontInfo fontInfo;
     Type type;
 #if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 1070
     RetainPtr<CFDictionaryRef> options;
